# CS677s26

./: .gitignore  CMakeLists.txt  README.md  presentation_notes.md
include/vj/: boosting_core.cuh  common_types.cuh  face_vision_engine.cuh  model_io.hpp
scripts/: convert_result.py  nsys_detect_profile.sh  prepare_data.py  requirements.txt  stage_negatives.py
src/: boosting_core.cu  face_vision_engine.cu  main.cu  model_io.cpp
